Bug 1006986 - Fix build fail for flame debug. r=echou